--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
     <link href="navbar-top-fixed.css" rel="stylesheet">
   </head>
   <body>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="ornl.png" width="100" fill="none" alt="Oak Ridge National Laboratory" href="https://www.ornl.gov"/></h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
+    <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
+    <a class="p-2 text-dark d-md-inline-block" href="teaching.html">Teaching</a>
+    <a class="p-2 text-dark d-md-inline-block" href="awards.html">Awards</a>
+    <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
+    <!-- <a class="p-2 text-dark d-md-inline-block" href="#">Group</a> -->
+  </nav>
+<!--   <a class="py-2" href="#" aria-label="Product">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+    </a> -->
+</div>
+    <div class="view" style="background-image: url('hpc.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+        <div align="center" style="color:white">
+          <br/>
+          <h2> Xin Liang</h2>
+          <br/>
+          <h3 class="lead">Computer/Data Scientist @ Workflow System Group<br/>
+          Computer Science and Mathematics Division<br/>
+          Oak Ridge National Laboratory</h3>
+          <br/>
+          <h4 class="lead">Office: Building 4100, Room C222<br/>
+          Email: liangx@ornl.gov</h4>
+          <br/>
+        </div>  
+
+    </div>
+
 <!--     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,89 +97,70 @@
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <img src="me.jpg" class="img-fluid" alt="Responsive image">
-        </div>
-        <div class="col-md-6" align="center">
-          <h1> Xin Liang</h1>
-          <p>xlian007@ucr.edu</p>
-
-          <p class="lead">459 Winton Chung Hall<br>
-          900 University Avenue<br>
-          Riverside, CA 92521</p>
-
-          <p class="lead">Department of Computer Science and Engineering<br>
-          University of California, Riverside</p>
-        </div>  
-      </div>
-
-      <div><hr></div>
-
-      <div class="row">
-        <div class="col-md-3" align="center">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </div>
-        <div class="col-md-3" align="center">
-          <a class="nav-link" href="publications.html">Publications</a>
-        </div>
-        <div class="col-md-3" align="center">
-          <a class="nav-link" href="awards.html">Awards</a>
-        </div>
-        <div class="col-md-3" align="center">
-          <a class="nav-link" href="activities.html">Activities</a>
+        <div class="col">
+            <img src="me.jpg" class="float-right" style="height:300px;margin-right:10px">
+          <h2 align="left"> Biography</h2>
+          <p align="left">Dr. Xin Liang is a Computer/Data Scientist in the Workflow System Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he has worked as student interns at the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory</a>.</p>
+          <p align="left">Dr. Liang's research interests lie broadly in the areas of high-performance computing, parallel and distributed systems, scientific data management, large-scale data analytics, and distributed machine learning. He has published in many highly competitive conferences and journals such as IEEE/ACM SC, ACM HPDC, ACM PPoPP, ACM ICS, IEEE IPDPS, ACM PACT, IEEE BigData, IEEE Cluster, IEEE TPDS etc. He has received <I>Dissertation Year Fellowship (DYP)</I> from UCR and <I>Best Paper Award</I> from IEEE Cluster 2018. Currently, he leads the ESAMR project funded by the <I>Director's Research and Development (DRD)</I> program at ORNL. He is one of the key developers of SZ and major contributors of MGARD, which are two widely used data reduction software in the scientific computing community. More details about Dr. Liang can be found in his <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
         </div>
       </div>
-
-      <div><hr></div>
-
-      <div class="starter-template">
-        <p class="lead">Biography</p>
-        <p>I am a Ph.D. candidate in <a href="http://www1.cs.ucr.edu/">Computer Science Department</a> of <a href="http://www.ucr.edu/">University of California, Riverside<a>, co-advised by Dr. <a href="http://www.cs.ucr.edu/~chen/">Zizhong Chen</a> and Dr. <a href="https://www.anl.gov/profile/franck-cappello">Franck Cappello<a> (<a href="https://www.anl.gov/">Argonne National Laboratory</a>). Before coming to UCR, I got my B.S. in Computer Science from <a href="http://www.pku.edu.cn/">Peking University</a> in 2014, with a minor in Mathematics. My research interests lie broadly in the area of high-performance computing, with a special focus on resilient algorithms and data management, reduction and analytics. I did two internships in <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory</a> and <a href="http://www.lanl.gov/">Los Alamos National Laboratory</a>, working with Dr. <a href="http://hpc.pnl.gov/people/vishnu/">Abhinav Vishnu</a> on extreme scale machine learning and Dr. <a href="https://sites.google.com/site/qiangguan2014/">Qiang Guan</a> on container-based application encapsulation and in-situ deep neural network visualization, respectively. Currently, I am taking a long-term internship in <a href="https://www.anl.gov/">Argonne National Laboratory</a>, working on error-bounded lossy compression for scientific datasets under the supervision of Dr. <a href="https://www.mcs.anl.gov/~shdi/">Sheng Di</a> and Dr. <a href="https://www.anl.gov/profile/franck-cappello">Franck Cappello<a>. I am also mentored by Dr. <a href="https://www.mcs.anl.gov/~hguo/">Hanqi Guo</a> and Dr. <a href="https://www.mcs.anl.gov/~tpeterka/">Tom Peterka</a> since this summer, researching on feature-preserving lossy compression for 2D/3D piece-wise linear vector fields in scientific visualization. More details about me can be found in my <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
-      </div>
-
 
       <div><hr></div>
       <div class="starter-template">
-        <p class="lead">Education</p>
+        <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
-          <li>Ph. D. in Computer Science, University of California, Riverside, 2014-present.</li>
-          <li>B. S. in Computer Science, Peking University, 2010-2014.</li>
-          <li>Minor in Mathematics, Peking University, 2011-2014.</li>
+          <li>10/2020: Our LDRD project (my role: PI) was funded by ORNL.</li>
+          <li>09/2020: Our Sirius-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
+          <li>09/2020: Our RADIDS-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
+          <li>09/2020: One paper has been accepted in TPDS-SS-AI.</li>
+          <li>08/2020: One paper has been accepted in Cluster'20.</li>
+          <li>07/2020: One paper has been accepted in PACT'20.</li>
+          <li>03/2020: One paper has been accepted in HPDC'20.</li>
+          <li>03/2020: Starting at ORNL as a Computer/Data Scientitst.</li>
+          <li>01/2020: One paper has been accepted in PacificVis'20.</li>
         </ul>
       </div>
 
-
       <div><hr></div>
       <div class="starter-template">
-        <p class="lead">Research Interests</p>
+        <h2>Research Interests</h2>
         <ul class="glyphicon glyphicon-list-alt">
           <li>Parallel, distributed, and heterogeneous systems.</li>
-          <li>Lossy compression and data management.</li>
+          <li>Data management, reduction, refactoring, and streaming.</li>
           <li>Scientific visualization and data analytics.</li>
-          <li>Large-scale data mining and machine learning algorithms.</li>
-          <li>Scalable training and efficient inference for deep neural networks.</li>
+          <li>Large-scale machine learning and deep learning.</li>
+          <li>Cloud and edge computing.</li>
           <li>Fault tolerant mechanics, algorithms, and implementations.</li>
           <li>Linear algebra and numerical algorithms.</li>
         </ul>
       </div>
 
       <div><hr></div>
+      <div class="starter-template">
+        <h2>Education</h2>
+        <ul class="glyphicon glyphicon-list-alt">
+          <li>Ph. D. in Computer Science, University of California, Riverside, 2014-2019.</li>
+          <li>B. S. in Computer Science, Peking University, 2010-2014.</li>
+          <li>Minor in Mathematics, Peking University, 2011-2014.</li>
+        </ul>
+      </div>
+
+      <div><hr></div>
 
       <div class="starter-template">
-        <p class="lead">Representative Publications (<a href="publications.html">Full List</a>)</p>
-<!--         <div class="row">
+        <h2>Selected Publications (<a href="research.html#publication">Full List</a>)</h2>
+        <div class="row">
           <div class="col-md-2">
-            <h6>PacificVis'20<br>(in submission)</h6>
+            <h6>PacificVis'20</h6>
           </div>
           <div class="col-md-10">
             <p>
               <b>Xin Liang</b>, Hanqi Guo, Sheng Di, Franck Cappello, Mukund Raj, Chunhui Liu, Kenji Ono, Zizhong Chen and Tom Peterka.<br>
               Towards Feature Preserving 2D and 3D Vector Field Compression.<br>
-              <I>In submission to the 13rd IEEE Pacific Visualization Symposium, Tianjin, China, Apr 14-17, 2020.</I><br>
+              <I>Proceedings of the 13rd IEEE Pacific Visualization Symposium, Tianjin, China, Apr 14-17, 2020. Acceptance Rate: 24% (23/96)</I><br>
             </p>
           </div>
-        </div>  -->
+        </div> 
         <div class="row">
           <div class="col-md-2">
             <h6>SC'19</h6>
@@ -174,7 +185,7 @@
             </p>
           </div>
         </div> -->
-<!--         <div class="row">
+        <div class="row">
           <div class="col-md-2">
             <h6>Cluster'19</h6>
           </div>
@@ -185,7 +196,7 @@
               <I>Proceedings of the 2019 IEEE International Conference on Cluster Computing, Albuquerque, New Mexico USA, September 23 - 26, 2019. Acceptance Rate: 27.7% (39/141)</I><br>
             </p>
           </div>
-        </div> -->
+        </div>
 <!--         <div class="row">
           <div class="col-md-2">
             <h6>HPDC'19</h6>
