--- a/services.html
+++ b/services.html
@@ -80,25 +80,36 @@
 <main role="main" class="container">
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
-      <div class="starter-template">
-          <h2>Awards</h2>
+          <div class="starter-template">
+          <h2>Program Committee</h2>
           <ul class="glyphicon glyphicon-list-alt">
-              <li>Best Paper Award, IEEE Cluster, 2018.</li>
-              <li>Dissertation Year Program Fellowship, University of California, Riverside, 2018. </li>
-              <li>Dean's Distinguished Fellowship, University of California, Riverside, 2014.</li>
+              <li>IEEE International Conference on High Performance Computing and Communications (HPCC)</li>
+              <li>China Visualization and Visual Analytics Conference (ChinaVis)</li>
+              <li>International Workshop on Data Reduction for Big Scientific Data (DRBSD)</li>
+              <li>International Workshop on Big Data Reduction (IWBDR)</li>
           </ul>
           </div>
-      </div> 
       <div><hr></div>
-      <div class="starter-template">
-          <h2>Travel Grants</h2>
+          <div class="starter-template">
+          <h2>Journal Reviewer</h2>
           <ul class="glyphicon glyphicon-list-alt">
-              <li>Student Travel Grant, IEEE Big Data, 2018.</li>
-              <li>Student Travel Grant, IEEE Cluster, 2018.</li>
-              <li>Student Travel Grant, IEEE/ACM SC, 2016.</li>
-              <li>Student Travel Grant, IEEE/ACM SC, 2015.</li>
+              <li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
+              <li>IEEE Transactions on Computers (TC)</li>
+              <li>The Journal of Systems Architecture: Embedded Software Design (JSA)</li>
+              <li>Journal of Visualization (JV)</li>
           </ul>
-      </div> 
+          </div>
+      <div><hr></div>
+
+          <div class="starter-template">
+          <h2>Student Volunteer</h2>
+          <ul class="glyphicon glyphicon-list-alt">
+              <li>IEEE BigData’18</li>
+              <li>NAS’16</li>
+              <li>IEEE/ACM SC’16</li>
+              <li>IEEE/ACM SC’15</li>
+          </ul>
+          </div>
       <div><hr></div>
   <!-- </div> -->
 </main>
