--- a/teaching.html
+++ b/teaching.html
@@ -81,23 +81,16 @@
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
       <div class="starter-template">
-          <h2>Awards</h2>
+          <h2>Teaching Assistant</h2>
           <ul class="glyphicon glyphicon-list-alt">
-              <li>Best Paper Award, IEEE Cluster, 2018.</li>
-              <li>Dissertation Year Program Fellowship, University of California, Riverside, 2018. </li>
-              <li>Dean's Distinguished Fellowship, University of California, Riverside, 2014.</li>
+              <li>CS150: Automata and Formal Languages, University of California, Riverside, Riverside, CA, April–June, 2016.</li>
+              <li>CS008: Introduction to Computing, University of California, Riverside, Riverside, CA, April–June, 2016.</li>
+              <li>CS161: Design & Architecture of Computer Systems, University of California, Riverside, Riverside, CA, January–March, 2016.</li>
+              <li>CS203: Advanced Computer Architecture, University of California, Riverside, Riverside, CA, January–March, 2016.</li>
+              <li>CS010: Intro: CS for Sci, Math & Engr I, University of California, Riverside, Riverside, CA, October–December, 2015.</li>
+              <li>CS008: Introduction to Computing, University of California, Riverside, Riverside, CA, October–December, 2015.</li>
           </ul>
           </div>
-      </div> 
-      <div><hr></div>
-      <div class="starter-template">
-          <h2>Travel Grants</h2>
-          <ul class="glyphicon glyphicon-list-alt">
-              <li>Student Travel Grant, IEEE Big Data, 2018.</li>
-              <li>Student Travel Grant, IEEE Cluster, 2018.</li>
-              <li>Student Travel Grant, IEEE/ACM SC, 2016.</li>
-              <li>Student Travel Grant, IEEE/ACM SC, 2015.</li>
-          </ul>
       </div> 
       <div><hr></div>
   <!-- </div> -->
