--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
     <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
     <!-- <a class="p-2 text-dark d-md-inline-block" href="#">Group</a> -->
   </nav>
-<!--   <a class="py-2" href="#" aria-label="Product">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
-    </a> -->
 </div>
     <div class="view" style="background-image: url('hpc.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
         <div align="center" style="color:white">
@@ -67,32 +64,6 @@
 
     </div>
 
-<!--     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="publications.html">Publications</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="awards.html">Awards</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="activities.html">Activities</a>
-      </li>
-    </ul>
-    <div class="mt-2 mt-md-0">
-      <a class="navbar-brand" href="#">Xin Liang @ UCR</a>
-    </div> 
-  </div>
-</nav> -->
-
 <main role="main" class="container">
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
@@ -102,6 +73,8 @@
           <h2 align="left"> Biography</h2>
           <p align="left">Dr. Xin Liang is a Computer/Data Scientist in the Workflow System Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he has worked as student interns at the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory</a>.</p>
           <p align="left">Dr. Liang's research interests lie broadly in the areas of high-performance computing, parallel and distributed systems, scientific data management, large-scale data analytics, and distributed machine learning. He has published in many highly competitive conferences and journals such as IEEE/ACM SC, ACM HPDC, ACM PPoPP, ACM ICS, IEEE IPDPS, ACM PACT, IEEE BigData, IEEE Cluster, IEEE TPDS etc. He has received <I>Dissertation Year Fellowship (DYP)</I> from UCR and <I>Best Paper Award</I> from IEEE Cluster 2018. Currently, he leads the ESAMR project funded by the <I>Director's Research and Development (DRD)</I> program at ORNL. He is one of the key developers of SZ and major contributors of MGARD, which are two widely used data reduction software in the scientific computing community. More details about Dr. Liang can be found in his <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
+
+          <p align="left"><b>Dr. Liang will join Missouri Univeristy of Science and Technolgy as a tenure-track assitant professor in Spring 2021 and is actively looking for self-motivated students. If you're interested in his research, please contact him at <a href="mailto:lx.altria@gmail.com">lx.altria@gmail.com</a>.</b></p>
         </div>
       </div>
 
