--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="ornl.png" width="100" fill="none" alt="Oak Ridge National Laboratory" href="https://www.ornl.gov"/></h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="mst.png" width="100" fill="none" alt="Missouri University of Science and Technology" href="https://www.mst.edu"/></h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
@@ -53,12 +53,13 @@
           <br/>
           <h2> Xin Liang</h2>
           <br/>
-          <h3 class="lead">Computer/Data Scientist @ Workflow System Group<br/>
-          Computer Science and Mathematics Division<br/>
-          Oak Ridge National Laboratory</h3>
+          <h3 class="lead">Assistant Professor<br/>
+          Department of Computer Science<br/>
+          Missouri University of Science and Technology</h3>
           <br/>
-          <h4 class="lead">Office: Building 4100, Room C222<br/>
-          Email: liangx@ornl.gov</h4>
+          <h4 class="lead">Office: 333 Computer Science Bldg.<br/>
+          Email: xliang@mst.edu<br/>
+          Tel: (573)341-4491</h4>
           <br/>
         </div>  
 
@@ -71,10 +72,10 @@
         <div class="col">
             <img src="me.jpg" class="float-right" style="height:300px;margin-right:10px">
           <h2 align="left"> Biography</h2>
-          <p align="left">Dr. Xin Liang is a Computer/Data Scientist in the Workflow System Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he has worked as student interns at the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory</a>.</p>
+          <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the <a href="https://cs.mst.edu">Department of Computer Science</a> at <a href="https://www.mst.edu">Missouri University of Science and Technology (MS&T)</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he has worked as student interns at the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory (ANL)</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory (LANL)</a>. Prior to joining MS&T, he was a Computer/Data Scientist in the Workflow Systems Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory (ORNL)</a>.</p>
           <p align="left">Dr. Liang's research interests lie broadly in the areas of high-performance computing, parallel and distributed systems, scientific data management, large-scale data analytics, and distributed machine learning. He has published in many highly competitive conferences and journals such as IEEE/ACM SC, ACM HPDC, ACM PPoPP, ACM ICS, IEEE IPDPS, ACM PACT, IEEE BigData, IEEE Cluster, IEEE TPDS etc. He has received <I>Dissertation Year Fellowship (DYP)</I> from UCR and <I>Best Paper Award</I> from IEEE Cluster 2018. Currently, he leads the ESAMR project funded by the <I>Director's Research and Development (DRD)</I> program at ORNL. He is one of the key developers of SZ and major contributors of MGARD, which are two widely used data reduction software in the scientific computing community. More details about Dr. Liang can be found in his <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
 
-          <p align="left"><b>Dr. Liang will join Missouri Univeristy of Science and Technolgy as a tenure-track assitant professor in Spring 2021 and is actively looking for self-motivated students. If you're interested in his research, please contact him at <a href="mailto:lx.altria@gmail.com">lx.altria@gmail.com</a>.</b></p>
+          <p align="left"><b>Dr. Liang is actively looking for self-motivated students to work on high-performance computing, scientific data management, and large-scale data analytics. If you're interested in his research, please contact him at <a href="mailto:xliang@mst.edu">xliang@mst.edu</a>.</b></p>
         </div>
       </div>
 
@@ -82,6 +83,8 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>01/2021: Starting at MS&T as a tenure-track assistant professor.</li>
+          <li>12/2020: Two papers have been accepted in IPDPS'21.</li>
           <li>10/2020: Our LDRD project (my role: PI) was funded by ORNL.</li>
           <li>09/2020: Our Sirius-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
           <li>09/2020: Our RADIDS-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
