--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
   </head>
   <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="ornl.png" width="100" fill="none" alt="Oak Ridge National Laboratory" href="https://www.ornl.gov"/></h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="mst.png" width="100" fill="none" alt="Missouri University of Science and Technology" href="https://www.mst.edu"/></h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
@@ -129,6 +129,36 @@
         <div><hr></div>
         <h4 class="lead">Refereed Conference Publications</h4>
         <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPS'21</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+                Jieyang Chen, Lipeng Wan, <b>Xin Liang</b>, Ben Whitney, Qing Liu, Dave Pugmire, Nicholas Thompson, Matthew Wolf, Todd Munson, Ian Foster, and Scott Klasky.<br>
+                Accelerating Multigrid-based Hierarchical Scientific Data Refactoring on GPUs.<br>
+                <I>Proceedings of the 35th IEEE International Parallel and Distributed Symposium, Portland, Oregon, May 17-21, 2021.</I><br>
+            </p>
+          </div>
+          <div class="col-md-2">
+            <h6>IPDPS'21</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+                Jiannan Tian, Cody Rivera, Sheng Di, Jieyang Chen, <b>Xin Liang</b>, Dingwen Tao, and Franck Cappello.<br>
+                Revisiting Huffman Coding: Toward Extreme Performance on Modern GPU Architectures.<br>
+                <I>Proceedings of the 35th IEEE International Parallel and Distributed Symposium, Portland, Oregon, May 17-21, 2021.</I><br>
+            </p>
+          </div>
+          <div class="col-md-2">
+            <h6>Cluster'20</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+                Sihuan Li, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
+                Towards End-to-end SDC Detection for HPC Applications Equipped with Lossy Compression.<br>
+                <I>Proceedings of the 22nd IEEE International Conference on Cluster Computing, Kobe, Japan, September 2020. Acceptance Rate: 20% (27/132)</I><br>
+            </p>
+          </div>
           <div class="col-md-2">
             <h6>Cluster'20</h6>
           </div>
