--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
   </head>
   <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="ornl.png" width="100" fill="none" alt="Oak Ridge National Laboratory" href="https://www.ornl.gov"/></h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="mst.png" width="100" fill="none" alt="Missouri University of Science and Technology" href="https://www.mst.edu"/></h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
