--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>06/2021: Two papers have been accepted in SC'21.</li>
+          <li>05/2021: One paper has been accepted in IEEE Transaction on Computers.</li>
           <li>01/2021: Starting at MS&T as a tenure-track assistant professor.</li>
           <li>12/2020: Two papers have been accepted in IPDPS'21.</li>
           <li>10/2020: Our LDRD project (my role: PI) was funded by ORNL.</li>
@@ -127,6 +129,30 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>)</h2>
         <div class="row">
           <div class="col-md-2">
+            <h6>SC'19</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang</b>, Qian Gong, Jieyang Chen, Ben Whitney, Lipeng Wan, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, and Scott Klasky.<br>
+              Error-controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition.<br>
+              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TC</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang</b>, Ben Whitney, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
+              <I>To appear in IEEE Transaction on Computers, 2021.</I><br>
+            </p>
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-2">
             <h6>PacificVis'20</h6>
           </div>
           <div class="col-md-10">
@@ -149,18 +175,6 @@
             </p>
           </div>
         </div>
-<!--         <div class="row">
-          <div class="col-md-2">
-            <h6>SC'19</h6>
-          </div>
-          <div class="col-md-10">
-            <p>
-              Sihuan Li, Hongbo Li, <b>Xin Liang</b>, Jieyang Chen, Elisabeth Giem, Kaiming Ouyang, Kai Zhao, Sheng Di, Franck Cappello, and Zizhong Chen.<br>
-              FT-iSort: Efficient Fault Tolerance for Introsort.<br>
-              <I>Proceedings of the 31st ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, Denver, Colorado, USA, Nov 17 - 22, 2019. Acceptance Rate: 20.9% (72/344)</I><br>
-            </p>
-          </div>
-        </div> -->
         <div class="row">
           <div class="col-md-2">
             <h6>Cluster'19</h6>
@@ -173,18 +187,6 @@
             </p>
           </div>
         </div>
-<!--         <div class="row">
-          <div class="col-md-2">
-            <h6>HPDC'19</h6>
-          </div>
-          <div class="col-md-10">
-            <p>
-              Sian Jin, Sheng Di, <b>Xin Liang</b>, Jiannan Tian, Dingwen Tao, and Franck Cappello.<br>
-              DeepSZ: A Novel Framework to Compress Deep Neural Networks by Using Error-Bounded Lossy Compression.<br>
-              <I>Proceedings of the 28th ACM International Symposium on High-Performance Parallel and Distributed Computing, Phoenix, AZ, USA, June 24 - 28, 2019. Acceptance Rate: 20.7% (22/106)</I><br>
-            </p>
-          </div>
-        </div> -->
         <div class="row">
           <div class="col-md-2">
             <h6>Cluster'18</h6>
