--- a/research.html
+++ b/research.html
@@ -130,6 +130,18 @@
         <h4 class="lead">Refereed Conference Publications</h4>
         <div class="row">
           <div class="col-md-2">
+            <h6>SC'19</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang</b>, Qian Gong, Jieyang Chen, Ben Whitney, Lipeng Wan, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, and Scott Klasky.<br>
+              Error-controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition.<br>
+              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2">
             <h6>IPDPS'21</h6>
           </div>
           <div class="col-md-10">
@@ -484,6 +496,18 @@
 
       <div class="starter-template">
           <p class="lead">Refereed Journal Publications</p>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TC</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang</b>, Ben Whitney, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
+              <I>To appear in IEEE Transaction on Computers, 2021.</I><br>
+            </p>
+          </div>
+        </div> 
           <div class="row">
             <div class="col-md-2">
               <h6>TPDS-SS-AI'20</h6>
