--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>)</h2>
         <div class="row">
           <div class="col-md-2">
-            <h6>SC'19</h6>
+            <h6>SC'21</h6>
           </div>
           <div class="col-md-10">
             <p>
@@ -145,9 +145,9 @@
           </div>
           <div class="col-md-10">
             <p>
-              <b>Xin Liang</b>, Ben Whitney, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>To appear in IEEE Transaction on Computers, 2021.</I><br>
+              <I>To appear in IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
             </p>
           </div>
         </div> 
