--- a/research.html
+++ b/research.html
@@ -130,7 +130,7 @@
         <h4 class="lead">Refereed Conference Publications</h4>
         <div class="row">
           <div class="col-md-2">
-            <h6>SC'19</h6>
+            <h6>SC'21</h6>
           </div>
           <div class="col-md-10">
             <p>
@@ -502,9 +502,9 @@
           </div>
           <div class="col-md-10">
             <p>
-              <b>Xin Liang</b>, Ben Whitney, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
+              <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>To appear in IEEE Transaction on Computers, 2021.</I><br>
+              <I>To appear in IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
             </p>
           </div>
         </div> 
