--- a/research.html
+++ b/research.html
@@ -134,6 +134,18 @@
           </div>
           <div class="col-md-10">
             <p>
+              Sihuan Li, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
+              Resilient Error-bounded Lossy compressor for Data Transfer.<br>
+              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SC'21</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
               <b>Xin Liang</b>, Qian Gong, Jieyang Chen, Ben Whitney, Lipeng Wan, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, and Scott Klasky.<br>
               Error-controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition.<br>
               <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
@@ -522,25 +534,25 @@
           </div> 
           <div class="row">
             <div class="col-md-2">
-              <h6>TPDS'19</h6>
+              <h6>TPDS</h6>
             </div>
             <div class="col-md-10">
               <p>
                 Dingwen Tao, Sheng Di, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
                 Optimizing Lossy Compression Rate-Distortion from Automatic Online Selection between SZ and ZFP.<br>
-                <I>IEEE Transactions on Parallel and Distributed Systems.</I><br>
+                <I>IEEE Transactions on Parallel and Distributed Systems, 2019.</I><br>
               </p>
             </div>
           </div> 
           <div class="row">
             <div class="col-md-2">
-              <h6>TPDS'18</h6>
+              <h6>TPDS</h6>
             </div>
             <div class="col-md-10">
               <p>
                 Sheng Di, Dingwen Tao, <b>Xin Liang</b>, and Franck Cappello.<br>
                 Efficient Lossy Compression for Scientific Data based on Pointwise Relative Error Bound.<br>
-                <I>IEEE Transactions on Parallel and Distributed Systems.</I><br>
+                <I>IEEE Transactions on Parallel and Distributed Systems, 2018.</I><br>
               </p>
             </div>
           </div>
