--- a/research.html
+++ b/research.html
@@ -522,7 +522,7 @@
         </div> 
           <div class="row">
             <div class="col-md-2">
-              <h6>TPDS-SS-AI'20</h6>
+              <h6>TPDS-SS-AI</h6>
             </div>
             <div class="col-md-10">
               <p>
